--- a/fcrepo-integrationtest/fcrepo-integrationtest-core/pom.xml
+++ b/fcrepo-integrationtest/fcrepo-integrationtest-core/pom.xml
@@ -13,6 +13,15 @@
   <packaging>jar</packaging>
   <name>Fedora Integration Test - Basic Tests &amp; Resources</name>
 
+  <build>
+    <resources>
+     <resource>
+       <directory>${basedir}/src/main/resources</directory>
+       <filtering>false</filtering>
+     </resource>
+    </resources>
+  </build>
+  
   <dependencies>
   
     <dependency>
@@ -26,7 +35,6 @@
       <artifactId>fcrepo-common</artifactId>
       <classifier>tests</classifier>
       <version>${project.version}</version>
-      <scope>test</scope>
     </dependency>
 
     <dependency>
@@ -34,7 +42,6 @@
       <artifactId>fcrepo-server</artifactId>
       <classifier>tests</classifier>
       <version>${project.version}</version>
-      <scope>test</scope>
     </dependency>
 
     <dependency>
@@ -46,13 +53,13 @@
     <dependency>
       <groupId>xmlunit</groupId>
       <artifactId>xmlunit</artifactId>
+      <scope>compile</scope>
     </dependency>
 
     <dependency>
       <groupId>org.apache.httpcomponents</groupId>
       <artifactId>httpclient</artifactId>
       <version>4.0.1</version>
-      <scope>test</scope>
       <exclusions>
         <exclusion>
           <groupId>commons-logging</groupId>
@@ -65,7 +72,6 @@
       <groupId>org.apache.httpcomponents</groupId>
       <artifactId>httpmime</artifactId>
       <version>4.0.1</version>
-      <scope>test</scope>
       <exclusions>
         <exclusion>
           <groupId>commons-logging</groupId>
@@ -78,7 +84,6 @@
       <groupId>net.jcip</groupId>
       <artifactId>jcip-annotations</artifactId>
       <version>1.0</version>
-      <scope>test</scope>
     </dependency>
 
     <dependency>
