--- a/fcrepo-integrationtest/fcrepo-integrationtest-configA/pom.xml
+++ b/fcrepo-integrationtest/fcrepo-integrationtest-configA/pom.xml
@@ -5,7 +5,7 @@
 
   <parent>
     <groupId>org.fcrepo</groupId>
-    <artifactId>fcrepo</artifactId>
+    <artifactId>fcrepo-integrationtest</artifactId>
     <version>3.5-SNAPSHOT</version>
   </parent>
 
@@ -30,7 +30,9 @@
     <tomcat.port.shutdown>8005</tomcat.port.shutdown>
 
     <org.apache.activemq.default.directory.prefix>${project.build.directory}</org.apache.activemq.default.directory.prefix>
-    <install.properties>${project.build.directory}/test-classes/config/ConfigA.properties</install.properties>
+
+    <fedora.install.properties>${project.build.directory}/test-classes/config/ConfigA.properties</fedora.install.properties>
+    <fedora.install.version>${project.version}</fedora.install.version>
     <test.report.directory>${project.build.directory}/failsafe-reports/configA</test.report.directory>
   </properties>
 
@@ -49,10 +51,12 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-dependency-plugin</artifactId>
         <version>2.1</version>
+
+        <!-- Put a physical copy of installer artifact in build dir -->
         <executions>
           <execution>
             <id>copy-installer</id>
-            <phase>package</phase>
+            <phase>pre-integration-test</phase>
             <goals>
               <goal>copy</goal>
             </goals>
@@ -64,7 +68,55 @@
                   <version>${project.version}</version>
                   <type>jar</type>
                   <overWrite>true</overWrite>
-                  <outputDirectory>${project.build.directory}/bin</outputDirectory>
+                  <outputDirectory>${project.build.directory}/ext/fcrepo-installer</outputDirectory>
+                </artifactItem>
+              </artifactItems>
+            </configuration>
+          </execution>
+
+          <!--
+            Put physical copy of fedora install/run ant scripts into
+            build dir
+          -->
+          <execution>
+            <id>unpack-scripts</id>
+            <phase>pre-integration-test</phase>
+            <goals>
+              <goal>unpack</goal>
+            </goals>
+            <configuration>
+              <artifactItems>
+                <artifactItem>
+                  <groupId>org.fcrepo</groupId>
+                  <artifactId>fcrepo-integrationtest-core</artifactId>
+                  <version>${project.version}</version>
+                  <type>jar</type>
+                  <overWrite>true</overWrite>
+                  <outputDirectory>${project.build.directory}/ext/fcrepo-integrationtest-core/</outputDirectory>
+                  <includes>**/scripts/*.xml</includes>
+                </artifactItem>
+              </artifactItems>
+            </configuration>
+          </execution>
+
+          <!--
+            Maven cannot (yet) execute tests directly from an artifact
+            jar. The .class files need to be be present in the buld dir
+            somewhere.
+          -->
+          <execution>
+            <id>unpack-tests</id>
+            <phase>pre-integration-test</phase>
+            <goals>
+              <goal>unpack</goal>
+            </goals>
+            <configuration>
+              <artifactItems>
+                <artifactItem>
+                  <groupId>org.fcrepo</groupId>
+                  <artifactId>fcrepo-integrationtest-core</artifactId>
+                  <version>${project.version}</version>
+                  <outputDirectory>${project.build.directory}/ext/fcrepo-integrationtest-core/test-classes</outputDirectory>
                 </artifactItem>
               </artifactItems>
             </configuration>
@@ -72,6 +124,7 @@
         </executions>
       </plugin>
 
+      <!-- Execute installer and run/stop tomcat -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-antrun-plugin</artifactId>
@@ -83,10 +136,12 @@
             <configuration>
               <target>
                 <echo>Installing Fedora</echo>
-                <ant antfile="src/test/scripts/installer-run.xml"
+                <ant
+                  antfile="target/ext/fcrepo-integrationtest-core/scripts/installer-run.xml"
                   target="install" inheritrefs="true" />
                 <echo>Starting Fedora</echo>
-                <ant antfile="src/test/scripts/tomcat-run.xml"
+                <ant
+                  antfile="target/ext/fcrepo-integrationtest-core/scripts/tomcat-run.xml"
                   target="tomcat-start" inheritrefs="true" />
               </target>
             </configuration>
@@ -101,7 +156,8 @@
             <configuration>
               <target>
                 <echo>Stopping Fedora</echo>
-                <ant antfile="src/test/scripts/tomcat-run.xml"
+                <ant
+                  antfile="target/ext/fcrepo-integrationtest-core/scripts/tomcat-run.xml"
                   target="tomcat-stop" inheritrefs="true" />
               </target>
             </configuration>
@@ -115,6 +171,12 @@
             <groupId>ant-contrib</groupId>
             <artifactId>ant-contrib</artifactId>
             <version>1.0b3</version>
+
+            <!--
+              ant-contrib pulls in a very old version of Ant that causes
+              problems. Just use the one pulled in as a dependency of
+              the antrun plugin.
+            -->
             <exclusions>
               <exclusion>
                 <groupId>ant</groupId>
@@ -137,15 +199,24 @@
             <goals>
               <goal>integration-test</goal>
             </goals>
+            <configuration>
+              <testClassesDirectory>${project.build.directory}/ext/fcrepo-integrationtest-core/test-classes</testClassesDirectory>
+              <reportsDirectory>${project.build.directory}/failsafe-reports/fcrepo-integrationtest-core</reportsDirectory>
+            </configuration>
           </execution>
-
+          
           <execution>
             <id>verify</id>
             <phase>verify</phase>
             <goals>
               <goal>verify</goal>
             </goals>
+            <configuration>
+              <testClassesDirectory>${project.build.directory}/ext/fcrepo-integrationtest-core/test-classes</testClassesDirectory>
+              <reportsDirectory>${project.build.directory}/failsafe-reports/fcrepo-integrationtest-core</reportsDirectory>
+            </configuration>
           </execution>
+          
         </executions>
 
         <configuration>
@@ -212,4 +283,12 @@
     </plugins>
   </build>
 
+  <dependencies>
+    <dependency>
+      <groupId>org.fcrepo</groupId>
+      <artifactId>fcrepo-integrationtest-core</artifactId>
+      <version>${project.version}</version>
+      <scope>test</scope>
+    </dependency>
+  </dependencies>
 </project>
