--- a/fcrepo-integrationtest/fcrepo-integrationtest-configB/pom.xml
+++ b/fcrepo-integrationtest/fcrepo-integrationtest-configB/pom.xml
@@ -5,7 +5,7 @@
 
   <parent>
     <groupId>org.fcrepo</groupId>
-    <artifactId>fcrepo</artifactId>
+    <artifactId>fcrepo-integrationtest</artifactId>
     <version>3.5-SNAPSHOT</version>
   </parent>
 
@@ -31,7 +31,8 @@
 
     <org.apache.activemq.default.directory.prefix>${project.build.directory}</org.apache.activemq.default.directory.prefix>
 
-    <install.properties>${project.build.directory}/test-classes/config/ConfigB.properties</install.properties>
+    <fedora.install.properties>${project.build.directory}/test-classes/config/ConfigB.properties</fedora.install.properties>
+    <fedora.install.version>${project.version}</fedora.install.version>
     <test.report.directory>${project.build.directory}/failsafe-reports/configB</test.report.directory>
   </properties>
 
@@ -50,10 +51,12 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-dependency-plugin</artifactId>
         <version>2.1</version>
+
+        <!-- Put a physical copy of installer artifact in build dir -->
         <executions>
           <execution>
             <id>copy-installer</id>
-            <phase>package</phase>
+            <phase>pre-integration-test</phase>
             <goals>
               <goal>copy</goal>
             </goals>
@@ -65,7 +68,55 @@
                   <version>${project.version}</version>
                   <type>jar</type>
                   <overWrite>true</overWrite>
-                  <outputDirectory>${project.build.directory}/bin</outputDirectory>
+                  <outputDirectory>${project.build.directory}/ext/fcrepo-installer</outputDirectory>
+                </artifactItem>
+              </artifactItems>
+            </configuration>
+          </execution>
+
+          <!--
+            Put physical copy of fedora install/run ant scripts into
+            build dir
+          -->
+          <execution>
+            <id>unpack-scripts</id>
+            <phase>pre-integration-test</phase>
+            <goals>
+              <goal>unpack</goal>
+            </goals>
+            <configuration>
+              <artifactItems>
+                <artifactItem>
+                  <groupId>org.fcrepo</groupId>
+                  <artifactId>fcrepo-integrationtest-core</artifactId>
+                  <version>${project.version}</version>
+                  <type>jar</type>
+                  <overWrite>true</overWrite>
+                  <outputDirectory>${project.build.directory}/ext/fcrepo-integrationtest-core/</outputDirectory>
+                  <includes>**/scripts/*.xml</includes>
+                </artifactItem>
+              </artifactItems>
+            </configuration>
+          </execution>
+
+          <!--
+            Maven cannot (yet) execute tests directly from an artifact
+            jar. The .class files need to be be present in the buld dir
+            somewhere.
+          -->
+          <execution>
+            <id>unpack-tests</id>
+            <phase>pre-integration-test</phase>
+            <goals>
+              <goal>unpack</goal>
+            </goals>
+            <configuration>
+              <artifactItems>
+                <artifactItem>
+                  <groupId>org.fcrepo</groupId>
+                  <artifactId>fcrepo-integrationtest-core</artifactId>
+                  <version>${project.version}</version>
+                  <outputDirectory>${project.build.directory}/ext/fcrepo-integrationtest-core/test-classes</outputDirectory>
                 </artifactItem>
               </artifactItems>
             </configuration>
@@ -73,6 +124,7 @@
         </executions>
       </plugin>
 
+      <!-- Execute installer and run/stop tomcat -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-antrun-plugin</artifactId>
@@ -84,10 +136,12 @@
             <configuration>
               <target>
                 <echo>Installing Fedora</echo>
-                <ant antfile="src/test/scripts/installer-run.xml"
+                <ant
+                  antfile="target/ext/fcrepo-integrationtest-core/scripts/installer-run.xml"
                   target="install" inheritrefs="true" />
                 <echo>Starting Fedora</echo>
-                <ant antfile="src/test/scripts/tomcat-run.xml"
+                <ant
+                  antfile="target/ext/fcrepo-integrationtest-core/scripts/tomcat-run.xml"
                   target="tomcat-start" inheritrefs="true" />
               </target>
             </configuration>
@@ -102,7 +156,8 @@
             <configuration>
               <target>
                 <echo>Stopping Fedora</echo>
-                <ant antfile="src/test/scripts/tomcat-run.xml"
+                <ant
+                  antfile="target/ext/fcrepo-integrationtest-core/scripts/tomcat-run.xml"
                   target="tomcat-stop" inheritrefs="true" />
               </target>
             </configuration>
@@ -116,6 +171,12 @@
             <groupId>ant-contrib</groupId>
             <artifactId>ant-contrib</artifactId>
             <version>1.0b3</version>
+
+            <!--
+              ant-contrib pulls in a very old version of Ant that causes
+              problems. Just use the one pulled in as a dependency of
+              the antrun plugin.
+            -->
             <exclusions>
               <exclusion>
                 <groupId>ant</groupId>
@@ -138,15 +199,24 @@
             <goals>
               <goal>integration-test</goal>
             </goals>
+            <configuration>
+              <testClassesDirectory>${project.build.directory}/ext/fcrepo-integrationtest-core/test-classes</testClassesDirectory>
+              <reportsDirectory>${project.build.directory}/failsafe-reports/fcrepo-integrationtest-core</reportsDirectory>
+            </configuration>
           </execution>
-
+          
           <execution>
             <id>verify</id>
             <phase>verify</phase>
             <goals>
               <goal>verify</goal>
             </goals>
+            <configuration>
+              <testClassesDirectory>${project.build.directory}/ext/fcrepo-integrationtest-core/test-classes</testClassesDirectory>
+              <reportsDirectory>${project.build.directory}/failsafe-reports/fcrepo-integrationtest-core</reportsDirectory>
+            </configuration>
           </execution>
+          
         </executions>
 
         <configuration>
@@ -210,92 +280,18 @@
             <exclude>${instrumentedTests}</exclude>
             <exclude>${nestedClassTests}</exclude>
           </excludes>
+
         </configuration>
-
       </plugin>
-
     </plugins>
   </build>
 
   <dependencies>
-
     <dependency>
       <groupId>org.fcrepo</groupId>
-      <artifactId>fcrepo-common</artifactId>
-      <classifier>tests</classifier>
+      <artifactId>fcrepo-integrationtest-core</artifactId>
       <version>${project.version}</version>
       <scope>test</scope>
     </dependency>
-
-    <dependency>
-      <groupId>org.fcrepo</groupId>
-      <artifactId>fcrepo-server</artifactId>
-      <classifier>tests</classifier>
-      <version>${project.version}</version>
-      <scope>test</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>org.fcrepo</groupId>
-      <artifactId>fcrepo-client-admin</artifactId>
-      <version>${project.version}</version>
-    </dependency>
-
-    <dependency>
-      <groupId>xmlunit</groupId>
-      <artifactId>xmlunit</artifactId>
-    </dependency>
-
-    <dependency>
-      <groupId>org.apache.httpcomponents</groupId>
-      <artifactId>httpclient</artifactId>
-      <version>4.0.1</version>
-      <scope>test</scope>
-      <exclusions>
-        <exclusion>
-          <groupId>commons-logging</groupId>
-          <artifactId>commons-logging</artifactId>
-        </exclusion>
-      </exclusions>
-    </dependency>
-
-    <dependency>
-      <groupId>org.apache.httpcomponents</groupId>
-      <artifactId>httpmime</artifactId>
-      <version>4.0.1</version>
-      <scope>test</scope>
-      <exclusions>
-        <exclusion>
-          <groupId>commons-logging</groupId>
-          <artifactId>commons-logging</artifactId>
-        </exclusion>
-      </exclusions>
-    </dependency>
-
-    <dependency>
-      <groupId>net.jcip</groupId>
-      <artifactId>jcip-annotations</artifactId>
-      <version>1.0</version>
-      <scope>test</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>org.fcrepo</groupId>
-      <artifactId>fcrepo-security-pdp</artifactId>
-      <version>${project.version}</version>
-    </dependency>
-
-    <dependency>
-      <groupId>org.antlr</groupId>
-      <artifactId>stringtemplate</artifactId>
-      <version>3.2.1</version>
-    </dependency>
-
-    <dependency>
-      <groupId>org.fcrepo</groupId>
-      <artifactId>fcrepo-installer</artifactId>
-      <version>${project.version}</version>
-    </dependency>
-
   </dependencies>
 </project>
