--- a/fcrepo-integrationtest/fcrepo-integrationtest-core/pom.xml
+++ b/fcrepo-integrationtest/fcrepo-integrationtest-core/pom.xml
@@ -5,7 +5,7 @@
 
   <parent>
     <groupId>org.fcrepo</groupId>
-    <artifactId>fcrepo</artifactId>
+    <artifactId>fcrepo-integrationtest</artifactId>
     <version>3.5-SNAPSHOT</version>
   </parent>
 
