--- a/fcrepo-integrationtest/fcrepo-integrationtest-configA/pom.xml
+++ b/fcrepo-integrationtest/fcrepo-integrationtest-configA/pom.xml
@@ -15,7 +15,7 @@
 
   <properties>
     <fedora.home>${project.build.directory}/fcrepo-${project.version}</fedora.home>
-    <javax.net.ssl.trustStore>${basedir}/../resources/inc/keystore</javax.net.ssl.trustStore>
+    <javax.net.ssl.trustStore>${project.build.directory}/ext/fcrepo-installer/resources/truststore</javax.net.ssl.trustStore>
     <fedora.username>fedoraAdmin</fedora.username>
     <fedora.password>fedoraAdmin</fedora.password>
 
@@ -52,7 +52,7 @@
         <artifactId>maven-dependency-plugin</artifactId>
         <version>2.1</version>
 
-        <!-- Put a physical copy of installer artifact in build dir -->
+        <!-- Place a physical copy of installer artifact in build dir -->
         <executions>
           <execution>
             <id>copy-installer</id>
@@ -69,6 +69,28 @@
                   <type>jar</type>
                   <overWrite>true</overWrite>
                   <outputDirectory>${project.build.directory}/ext/fcrepo-installer</outputDirectory>
+                </artifactItem>
+              </artifactItems>
+            </configuration>
+          </execution>
+
+          <!-- Place a copy of truststore in build dir -->
+          <execution>
+            <id>unpack-truststore</id>
+            <phase>pre-integration-test</phase>
+            <goals>
+              <goal>unpack</goal>
+            </goals>
+            <configuration>
+              <artifactItems>
+                <artifactItem>
+                  <groupId>org.fcrepo</groupId>
+                  <artifactId>fcrepo-installer</artifactId>
+                  <version>${project.version}</version>
+                  <type>jar</type>
+                  <overWrite>true</overWrite>
+                  <outputDirectory>${project.build.directory}/ext/fcrepo-installer</outputDirectory>
+                  <includes>**/truststore</includes>
                 </artifactItem>
               </artifactItems>
             </configuration>
@@ -204,7 +226,7 @@
               <reportsDirectory>${project.build.directory}/failsafe-reports/fcrepo-integrationtest-core</reportsDirectory>
             </configuration>
           </execution>
-          
+
           <execution>
             <id>verify</id>
             <phase>verify</phase>
@@ -216,7 +238,7 @@
               <reportsDirectory>${project.build.directory}/failsafe-reports/fcrepo-integrationtest-core</reportsDirectory>
             </configuration>
           </execution>
-          
+
         </executions>
 
         <configuration>
