--- a/fcrepo-server/pom.xml
+++ b/fcrepo-server/pom.xml
@@ -25,7 +25,8 @@
 
     <build>
 
-        <!-- This 'resource' directory should be migrated to default location -->
+        <!-- This 'resource' directory should be migrated to default location
+-->
         <resources>
             <resource>
                 <directory>../resources/server</directory>
@@ -122,7 +123,8 @@
             <!-- **
              This plugin needs to be removed when ANT is gone.
              The unit/integration test regex's should be defined at root/pom.xml
-           ** -->
+           **
+-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
@@ -311,88 +313,71 @@
                 </executions>
 
             </plugin>
+            
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>1.1.1</version>
+                <executions>
 
-        </plugins>
-
-    </build>
-
-    <profiles>
-
-        <profile>
-            <id>fedora-installer</id>
-
-            <activation>
-                <property>
-                    <name>fedora</name>
-                    <value>installer</value>
-                </property>
-            </activation>
-
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.codehaus.mojo</groupId>
-                        <artifactId>exec-maven-plugin</artifactId>
-                        <version>1.1.1</version>
-                        <executions>
-
-                            <execution>
-                                <id>gen-vocab</id>
-                                <phase>process-classes</phase>
-                                <goals>
-                                    <goal>java</goal>
-                                </goals>
-                                <configuration>
-                                    <mainClass>org.fcrepo.common.policy.Release2_1Namespace</mainClass>
-                                    <arguments>
-                                        <argument>${project.build.directory}/vocabulary.txt</argument>
-                                    </arguments>
+                    <execution>
+                        <id>gen-vocab</id>
+                        <phase>process-classes</phase>
+                        <goals>
+                            <goal>java</goal>
+                        </goals>
+                        <configuration>
+                            <mainClass>org.fcrepo.common.policy.Release2_1Namespace</mainClass>
+                            <arguments>
+                                <argument>${project.build.directory}/vocabulary.txt</argument>
+                            </arguments>
                                     <!--
                                        Note: this execution has the following dependencies:
                                            openrdf-sesame-2.2.1-onejar.jar
                                            mulgara-core-2.1.4.jar
                                            fedora-common.jar
                                     -->
-                                </configuration>
-                            </execution>
-                        </executions>
+                        </configuration>
+                    </execution>
+                </executions>
 
-                    </plugin>
+            </plugin>
 
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-jar-plugin</artifactId>
-                        <executions>
-                            <execution>
-                                <id>utilities-main</id>
-                                <phase>package</phase>
-                                <goals>
-                                    <goal>jar</goal>
-                                </goals>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>utilities-main</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
 
-                                <configuration>
+                        <configuration>
 
-                                    <classifier>utilities-main</classifier>
-                                    <archive>
-                                        <manifest>
-                                            <mainClass>org.fcrepo.utilities.install.Installer</mainClass>
-                                        </manifest>
-                                    </archive>
+                            <classifier>utilities-main</classifier>
+                            <archive>
+                                <manifest>
+                                    <mainClass>org.fcrepo.utilities.install.Installer</mainClass>
+                                </manifest>
+                            </archive>
 
-                                    <includes>
-                                        <include>org/fcrepo/utilities/**</include>
-                                        <include>org/fcrepo/server/**</include>
-                                        <include>**/fedorausers-mapping.xml</include>
-                                        <include>**/webxml-mapping.xml</include>
-                                    </includes>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-    </profiles>
+                            <includes>
+                                <include>org/fcrepo/utilities/**</include>
+                                <include>org/fcrepo/server/**</include>
+                                <include>**/fedorausers-mapping.xml</include>
+                                <include>**/webxml-mapping.xml</include>
+                            </includes>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
+        </plugins>
+
+    </build>
+
 
     <dependencies>
 
@@ -712,7 +697,8 @@
             <version>2.0.5</version>
         </dependency>
 
-        <!-- This is needed only to trigger the rmi-journal-rcv.jar assembly. -->
+        <!-- This is needed only to trigger the rmi-journal-rcv.jar assembly.
+-->
         <dependency>
             <groupId>org.fcrepo</groupId>
             <artifactId>one-jar-boot</artifactId>
