FCREPO-829: Use unpacked resources rather than source references
Some tests in fcrepo-integrationtest-core want to read from the local
module directory.  For a madule that executes fcrepo-integrationtest-core
tests, unpack them (and their resources) and read test/demo object files
from the unpacked location.

--- a/fcrepo-integrationtest/fcrepo-integrationtest-configA/pom.xml
+++ b/fcrepo-integrationtest/fcrepo-integrationtest-configA/pom.xml
@@ -256,6 +256,7 @@
             <fedora.appServerContext>${fedora.appServerContext}</fedora.appServerContext>
             <fedora.baseURL>${fedora.baseURL}</fedora.baseURL>
             <org.apache.activemq.default.directory.prefix>${org.apache.activemq.default.directory.prefix}</org.apache.activemq.default.directory.prefix>
+            <fcrepo-integrationtest-core.classes>${project.build.directory}/ext/fcrepo-integrationtest-core/test-classes/</fcrepo-integrationtest-core.classes>
           </systemPropertyVariables>
 
           <includes>
