--- a/fcrepo-generate/pom.xml
+++ b/fcrepo-generate/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.fcrepo</groupId>
     <artifactId>fcrepo</artifactId>
-    <version>3.4.2-SNAPSHOT</version>
+    <version>3.4.2</version>
   </parent>
 
   <artifactId>fcrepo-generate</artifactId>
