--- a/fcrepo-webapp/fcrepo-webapp-democontent/pom.xml
+++ b/fcrepo-webapp/fcrepo-webapp-democontent/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.fcrepo</groupId>
     <artifactId>fcrepo-webapp</artifactId>
-    <version>3.4.2-SNAPSHOT</version>
+    <version>3.4.2</version>
   </parent>
 
   <artifactId>fcrepo-webapp-democontent</artifactId>
