FCREPO-835: Cleanup buildNumber and timestamp
Cleans up all traces of ${buildNumber}; the maven-buildnumber-plugin
doesn't work with git.

Now using ${maven.build.timestamp} (available since Maven 2.1)
to populate the ${timestamp} variable for various uses in the build,
with formatting consistent with what was used before. The maven-defined
variable isn't used directly because of an outstanding issue with
resource filtering: http://jira.codehaus.org/browse/MRESOURCES-99

--- a/pom.xml
+++ b/pom.xml
@@ -114,6 +114,8 @@
     <instrumentedTests>**/*Test*__*.class</instrumentedTests>
     <nestedClassTests>**/*Test*$*.class</nestedClassTests>
     <integration.test.skip>false</integration.test.skip>
+    <maven.build.timestamp.format>yyyy-MM-dd HH:mm:ss 'UTC'Z</maven.build.timestamp.format>                                                                     
+    <timestamp>${maven.build.timestamp}</timestamp>
   </properties>
 
   <dependencyManagement>
