--- a/fcrepo-integrationtest/fcrepo-integrationtest-configC/pom.xml
+++ b/fcrepo-integrationtest/fcrepo-integrationtest-configC/pom.xml
@@ -13,8 +13,34 @@
   <packaging>jar</packaging>
   <name>Fedora Integration Test - Configuration C</name>
 
+  <profiles>
+    <profile>
+      <id>FEDORA_HOME-not-defined</id>
+      <activation>
+        <property>
+          <name>!env.FEDORA_HOME</name>
+        </property>
+      </activation>
+      <properties>
+        <fedora.home>${project.build.directory}/fcrepo-${project.version}</fedora.home>
+      </properties>
+    </profile>
+
+    <profile>
+      <id>FEDORA_HOME-is-defined</id>
+      <activation>
+        <property>
+          <name>env.FEDORA_HOME</name>
+        </property>
+      </activation>
+      <properties>
+        <fedora.home>${env.FEDORA_HOME}</fedora.home>
+      </properties>
+    </profile>
+
+  </profiles>
+
   <properties>
-    <fedora.home>${project.build.directory}/fcrepo-${project.version}</fedora.home>
     <javax.net.ssl.trustStore>${project.build.directory}/ext/fcrepo-installer/resources/truststore</javax.net.ssl.trustStore>
     <fedora.username>fedoraAdmin</fedora.username>
     <fedora.password>fedoraAdmin</fedora.password>
@@ -52,7 +78,7 @@
         <artifactId>maven-dependency-plugin</artifactId>
         <version>2.1</version>
 
-        <!-- Put a physical copy of installer artifact in build dir -->
+        <!-- Place a physical copy of installer artifact in build dir -->
         <executions>
           <execution>
             <id>copy-installer</id>
@@ -73,7 +99,7 @@
               </artifactItems>
             </configuration>
           </execution>
-          
+
           <!-- Place a copy of truststore in build dir -->
           <execution>
             <id>unpack-truststore</id>
@@ -95,7 +121,7 @@
               </artifactItems>
             </configuration>
           </execution>
-          
+
           <!--
             Put physical copy of fedora install/run ant scripts into
             build dir
@@ -226,7 +252,7 @@
               <reportsDirectory>${project.build.directory}/failsafe-reports/fcrepo-integrationtest-core</reportsDirectory>
             </configuration>
           </execution>
-          
+
           <execution>
             <id>verify</id>
             <phase>verify</phase>
@@ -238,7 +264,7 @@
               <reportsDirectory>${project.build.directory}/failsafe-reports/fcrepo-integrationtest-core</reportsDirectory>
             </configuration>
           </execution>
-          
+
         </executions>
 
         <configuration>
@@ -322,5 +348,4 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
-
 </project>
