--- a/fcrepo-integrationtest/fcrepo-integrationtest-configB/pom.xml
+++ b/fcrepo-integrationtest/fcrepo-integrationtest-configB/pom.xml
@@ -23,7 +23,77 @@
       </activation>
       <properties>
         <fedora.home>${project.build.directory}/fcrepo-${project.version}</fedora.home>
+        <fedora.install.properties>${project.build.directory}/test-classes/config/ConfigB.properties</fedora.install.properties>
+        <fedora.install.version>${project.version}</fedora.install.version>
       </properties>
+
+      <build>
+        <plugins>
+          <!-- Execute installer and run/stop tomcat -->
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-antrun-plugin</artifactId>
+            <version>1.6</version>
+            <executions>
+              <execution>
+                <id>start-fedora</id>
+                <phase>pre-integration-test</phase>
+                <configuration>
+                  <target>
+                    <echo>Installing Fedora</echo>
+                    <ant
+                      antfile="target/ext/fcrepo-integrationtest-core/scripts/installer-run.xml"
+                      target="install" inheritrefs="true" />
+                    <echo>Starting Fedora</echo>
+                    <ant
+                      antfile="target/ext/fcrepo-integrationtest-core/scripts/tomcat-run.xml"
+                      target="tomcat-start" inheritrefs="true" />
+                  </target>
+                </configuration>
+                <goals>
+                  <goal>run</goal>
+                </goals>
+              </execution>
+
+              <execution>
+                <id>stop-fedora</id>
+                <phase>post-integration-test</phase>
+                <configuration>
+                  <target>
+                    <echo>Stopping Fedora</echo>
+                    <ant
+                      antfile="target/ext/fcrepo-integrationtest-core/scripts/tomcat-run.xml"
+                      target="tomcat-stop" inheritrefs="true" />
+                  </target>
+                </configuration>
+                <goals>
+                  <goal>run</goal>
+                </goals>
+              </execution>
+            </executions>
+            <dependencies>
+              <dependency>
+                <groupId>ant-contrib</groupId>
+                <artifactId>ant-contrib</artifactId>
+                <version>1.0b3</version>
+
+                <!--
+                  ant-contrib pulls in a very old version of Ant that
+                  causes problems. Just use the one pulled in as a
+                  dependency of the antrun plugin.
+                -->
+                <exclusions>
+                  <exclusion>
+                    <groupId>ant</groupId>
+                    <artifactId>ant</artifactId>
+                  </exclusion>
+                </exclusions>
+              </dependency>
+            </dependencies>
+          </plugin>
+
+        </plugins>
+      </build>
     </profile>
 
     <profile>
@@ -57,8 +127,6 @@
 
     <org.apache.activemq.default.directory.prefix>${project.build.directory}</org.apache.activemq.default.directory.prefix>
 
-    <fedora.install.properties>${project.build.directory}/test-classes/config/ConfigB.properties</fedora.install.properties>
-    <fedora.install.version>${project.version}</fedora.install.version>
     <test.report.directory>${project.build.directory}/failsafe-reports/configB</test.report.directory>
   </properties>
 
@@ -170,69 +238,6 @@
             </configuration>
           </execution>
         </executions>
-      </plugin>
-
-      <!-- Execute installer and run/stop tomcat -->
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-antrun-plugin</artifactId>
-        <version>1.6</version>
-        <executions>
-          <execution>
-            <id>start-fedora</id>
-            <phase>pre-integration-test</phase>
-            <configuration>
-              <target>
-                <echo>Installing Fedora</echo>
-                <ant
-                  antfile="target/ext/fcrepo-integrationtest-core/scripts/installer-run.xml"
-                  target="install" inheritrefs="true" />
-                <echo>Starting Fedora</echo>
-                <ant
-                  antfile="target/ext/fcrepo-integrationtest-core/scripts/tomcat-run.xml"
-                  target="tomcat-start" inheritrefs="true" />
-              </target>
-            </configuration>
-            <goals>
-              <goal>run</goal>
-            </goals>
-          </execution>
-
-          <execution>
-            <id>stop-fedora</id>
-            <phase>post-integration-test</phase>
-            <configuration>
-              <target>
-                <echo>Stopping Fedora</echo>
-                <ant
-                  antfile="target/ext/fcrepo-integrationtest-core/scripts/tomcat-run.xml"
-                  target="tomcat-stop" inheritrefs="true" />
-              </target>
-            </configuration>
-            <goals>
-              <goal>run</goal>
-            </goals>
-          </execution>
-        </executions>
-        <dependencies>
-          <dependency>
-            <groupId>ant-contrib</groupId>
-            <artifactId>ant-contrib</artifactId>
-            <version>1.0b3</version>
-
-            <!--
-              ant-contrib pulls in a very old version of Ant that causes
-              problems. Just use the one pulled in as a dependency of
-              the antrun plugin.
-            -->
-            <exclusions>
-              <exclusion>
-                <groupId>ant</groupId>
-                <artifactId>ant</artifactId>
-              </exclusion>
-            </exclusions>
-          </dependency>
-        </dependencies>
       </plugin>
 
       <plugin>
