--- a/fcrepo-integrationtest/fcrepo-integrationtest-configC/src/test/resources/config/ConfigC.properties
+++ b/fcrepo-integrationtest/fcrepo-integrationtest-configC/src/test/resources/config/ConfigC.properties
@@ -10,7 +10,7 @@ fedora.serverContext=${fedora.appServerContext}
 tomcat.http.port=${fedora.port}
 tomcat.ssl.port=${tomcat.port.ssl}
 tomcat.shutdown.port=${tomcat.port.shutdown}
-fesl.dbxml.home=${fedora.home}/dbxml-home
+fesl.dbxml.home=${dbxml.home}
 
 # Settings required for this test configuration
 apia.auth.required=true
