--- a/fcrepo-client/fcrepo-client-webadmin/pom.xml
+++ b/fcrepo-client/fcrepo-client-webadmin/pom.xml
@@ -5,7 +5,7 @@
   <groupId>org.fcrepo</groupId>
   <artifactId>fcrepo-client-webadmin</artifactId>
   <packaging>swf</packaging>
-  <version>3.4.2</version>
+  <version>3.4.3-SNAPSHOT</version>
   <name>Fedora Web Admin Client (Flash)</name>
 
   <!--
