--- a/fcrepo-security/fcrepo-security-pep/pom.xml
+++ b/fcrepo-security/fcrepo-security-pep/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.fcrepo</groupId>
     <artifactId>fcrepo-security</artifactId>
-    <version>3.4.2</version>
+    <version>3.4.3-SNAPSHOT</version>
   </parent>
 
   <artifactId>fcrepo-security-pep</artifactId>
